--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,10 @@ ul + p {
 
 /* Exercice 05 */
 
-a[href]::after {
+a[href^="https://"]::after {
     content: 'open_in_new';
     display: inline-block;
-    font-family: 'Material Icons';
+    font-family: 'Material Symbols Outlined';
     font-size: 1.4rem;
     line-height: 1;
     margin-left: 5px;
