correction exercice 6 & 7 (background)

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,14 +46,14 @@ a[href^="https://"]::after {
 /* Exercice 06 */
 
 .exercice06 li:nth-child(even) {
-    color: red;
+    background-color: red;
 }
 
 
 /* Exercice 07 */
 
 .exercice07 li:nth-child(odd) {
-    color: red;
+    background-color: red;
 }
 
 
