--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,16 @@ a[href^="https://"]::after {
 
 /* Exercice 08 */
 
+.exercice08 li:nth-child(-n +3) {
+    background-color: red;
+}
+
 
 /* Exercice 09 */
+
+.exercice09 li:nth-last-child(2) {
+    background-color: red;
+}
 
 
 /* Exercice 10 */
