--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,10 @@ a[href^="https://"]::after {
 
 /* Exercice 13 */
 
+.exercice13 img[src$= ".jpg"] {
+    border: 3px solid red;
+}
+
 
 /* Exercice 14 */
 
